tests/error/effects_errors/pure_calls_impure_decl.err
Error: Too many effects (at $FILE:8:10)
  | 
6 | @guppy(max_effects=[])
7 | def main() -> int:
8 |    return impure_func(5)
  |           ^^^^^^^^^^^^^^ Callee of type `int -> int` has effects <UNKNOWN>
  |                          that exceed the allowed effects `[]`

Guppy compilation failed due to 1 previous error
